--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="style.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <img class="center" src = "./images/logo.png" alt ="logo" align="middle" width="400" height ="200"></img>
+    <img class="center" src = "./images/logo1.png" alt ="logo" width="500" height ="200"></img>
   </head>
   <body>
+    <!-- <div v-if="film" id="filmDetail">
+          <div id="detailWrapper">
+            <h2>Title</h2>
+            <div id="flexWrapper">
+              <div id="left">
+  <p>Hello</p>
+              </div>
+            </div>
+          </div>
+        </div> -->
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
@@ -17,15 +28,14 @@
     <!-- built files will be auto injected -->
   </body>
 </div>
-  <style>
-  #main{
-    background: url("./images/bg.png")
-  }
-
-  .center {
+</html>
+<style>
+.center {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
-  </style>
-</html>
+  html {
+    background-image: url("../public/images/bg.png")
+  }
+</style>
